objects/Advisory_Idea_Comment__c.object
<CustomObject>
    <description>This object tracks the comments associated with the Advisory Ideas listed on the Ideas Page.</description>
    <fields>
        <fullName>Advisory_Idea__c</fullName>
        <label>Advisory Idea</label>
        <referenceTo>Advisory_Idea__c</referenceTo>
        <relationshipLabel>Advisory Idea Comments</relationshipLabel>
        <relationshipName>Advisory_Idea_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commented_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commented By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.User_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advisory Idea Comments</relationshipLabel>
        <relationshipName>Comment_Posted_By</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Advisory Idea Comment</label>
    <nameField>
        <displayFormat>Comm-{0}</displayFormat>
        <label>Advisory Idea Comment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Idea Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>